Change file structure
Now just src and dist folders at root (along with README.md, config files etc.). File paths in files not yet updated so css, js etc. not working at this time.

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,10 +1,10 @@
 // Contained within this file are all your resets, variables, mixins, and any utility classes
 
 // Fonts
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap');
 
 @mixin main-font {
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 18px;
   color: white;
 }
@@ -12,7 +12,7 @@
 @mixin header-font {
   color: white;
   font-size: 125px;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 // Breakpoints
