Fixed broken links

--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -1,11 +1,39 @@
-<a class="footer-link" href="https://www.github.com/matthew-occleshaw/matthew-occleshaw.github.io" target="_blank"
-  rel="noopener">GitHub Repository</a>
-<br>
+<a
+  class="footer-link"
+  href="https://www.github.com/matthew-occleshaw/matthew-occleshaw.github.io"
+  target="_blank"
+  rel="noopener"
+  >GitHub Repository</a
+>
+<br />
 <div class="footer-icons-container">
-  <a class="social-media-icon" href="https://github.com/matthew-occleshaw" target="_blank" rel="noopener"><img
-      src="/images/github-logo.svg" alt="Github link" width="32" height="32"></a>
-  <a class="social-media-icon" href="https://twitter.com/" target="_blank" rel="noopener"><img
-      src="/images/twitter-logo.svg" alt="Twitter link" width="32" height="32"></a>
-  <a class="social-media-icon" href="https://uk.linkedin.com/" target="_blank" rel="noopener"><img
-      src="/images/linkedin-logo.svg" alt="Linkedin link" width="32" height="32"></a>
+  <a
+    class="social-media-icon"
+    href="https://github.com/matthew-occleshaw"
+    target="_blank"
+    rel="noopener"
+    ><img src="/dist/github-logo.svg" alt="Github link" width="32" height="32"
+  /></a>
+  <a
+    class="social-media-icon"
+    href="https://twitter.com/"
+    target="_blank"
+    rel="noopener"
+    ><img
+      src="/dist/twitter-logo.svg"
+      alt="Twitter link"
+      width="32"
+      height="32"
+  /></a>
+  <a
+    class="social-media-icon"
+    href="https://uk.linkedin.com/"
+    target="_blank"
+    rel="noopener"
+    ><img
+      src="/dist/linkedin-logo.svg"
+      alt="Linkedin link"
+      width="32"
+      height="32"
+  /></a>
 </div>
