--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -8,10 +8,19 @@
 <div id="navbar-container">
   <nav class="navbar">
     <a id="home-navbar-button" href="/index.html" class="navbar-button">Home</a>
-    <a id="portfolio-navbar-button" href="/html/dest/portfolio.html" class="navbar-button">Portfolio</a>
-    <a href="mailto:matthew_occleshaw@outlook.com" class="navbar-button float-right">Contact Me</a>
+    <a
+      id="portfolio-navbar-button"
+      href="/dist/portfolio.html"
+      class="navbar-button"
+      >Portfolio</a
+    >
+    <a
+      href="mailto:matthew_occleshaw@outlook.com"
+      class="navbar-button float-right"
+      >Contact Me</a
+    >
   </nav>
 </div>
 <div class="header-banner">
-  <h1 id=page-title class="header-text"></h1>
+  <h1 id="page-title" class="header-text"></h1>
 </div>
