Update keywords in <meta>

--- a/src/html/components/head.html
+++ b/src/html/components/head.html
@@ -2,7 +2,7 @@
 <meta name="description" content="" />
 <meta
   name="keywords"
-  content="web developer, github, python, html, css, javascript, nodejs, react"
+  content="web developer,developer,github,python,html,css,javascript,nodejs,react,django"
 />
 <meta name="author" content="Matthew Occleshaw" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
