Update links in footer
Username change means some older links no longer work.

--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -1,6 +1,6 @@
 <a
   class="footer-link"
-  href="https://www.github.com/matthew-occleshaw/matthew-occleshaw.github.io"
+  href="https://www.github.com/mjocc/mjocc.github.io"
   target="_blank"
   rel="noopener"
   >GitHub Repository</a
@@ -9,7 +9,7 @@
 <div class="footer-icons-container">
   <a
     class="social-media-icon"
-    href="https://github.com/matthew-occleshaw"
+    href="https://github.com/mjocc"
     target="_blank"
     rel="noopener"
     ><img src="/dist/github-logo.svg" alt="Github link" width="32" height="32"
@@ -32,7 +32,7 @@
     rel="noopener"
     ><img
       src="/dist/linkedin-logo.svg"
-      alt="Linkedin link"
+      alt="LinkedIn link"
       width="32"
       height="32"
   /></a>
