Use prettier links without .html extensions in navbar

--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -7,11 +7,8 @@
 </div>
 <div id="navbar-container">
   <nav class="navbar">
-    <a id="home-navbar-button" href="/index.html" class="navbar-button">Home</a>
-    <a
-      id="portfolio-navbar-button"
-      href="/dist/portfolio.html"
-      class="navbar-button"
+    <a id="home-navbar-button" href="/" class="navbar-button">Home</a>
+    <a id="portfolio-navbar-button" href="/dist/portfolio" class="navbar-button"
       >Portfolio</a
     >
     <a
