Fix broken links from site structure update

--- a/src/components/header.html
+++ b/src/components/header.html
@@ -8,7 +8,7 @@
 <div id="navbar-container">
   <nav class="navbar">
     <a id="home-navbar-button" href="/" class="navbar-button">Home</a>
-    <a id="portfolio-navbar-button" href="/dist/portfolio" class="navbar-button"
+    <a id="portfolio-navbar-button" href="/portfolio" class="navbar-button"
       >Portfolio</a
     >
     <a
