--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   height: 400px;
-  background-image: url(/dist/header-background.webp);
+  background-image: url(/dist/img/header-background.webp);
   background-size: cover;
   @include bp(tablet) {
     height: 300px;
