--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -12,7 +12,11 @@
     href="https://github.com/mjocc"
     target="_blank"
     rel="noopener"
-    ><img src="/dist/github-logo.svg" alt="Github link" width="32" height="32"
+    ><img
+      src="/dist/img/github-logo.svg"
+      alt="Github link"
+      width="32"
+      height="32"
   /></a>
   <a
     class="social-media-icon"
@@ -20,7 +24,7 @@
     target="_blank"
     rel="noopener"
     ><img
-      src="/dist/twitter-logo.svg"
+      src="/dist/img/twitter-logo.svg"
       alt="Twitter link"
       width="32"
       height="32"
@@ -31,7 +35,7 @@
     target="_blank"
     rel="noopener"
     ><img
-      src="/dist/linkedin-logo.svg"
+      src="/dist/img/linkedin-logo.svg"
       alt="LinkedIn link"
       width="32"
       height="32"
