Update email address in contact me link

--- a/src/components/header.html
+++ b/src/components/header.html
@@ -12,7 +12,7 @@
       >Portfolio</a
     >
     <a
-      href="mailto:matthew_occleshaw@outlook.com"
+      href="mailto:mjocc@outlook.com"
       class="navbar-button float-right"
       >Contact Me</a
     >
